[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
feed-rs = "1.2"
actix-web = "4"
log = "0.4"
env_logger = "0.10"
sqlx = { version = "0.6", features = [ "runtime-actix-native-tls", "sqlite" ] }
serde_json = "1.0"
serde = "1.0"
serde_with = "2.2"
mime = "0.3"
