[project]
name = "lfreader-backend"
version = "0.0.0"
dependencies = [
  "aiohttp",
  "beautifulsoup4",
  "feedparser",
  "fastapi",
  "uvicorn[standard]",
]

[tool.setuptools]
packages = ["lfreader_server", "lfreader_lookup"]

[project.scripts]
lfreader-server = "lfreader_server.app:main"
lfreader-lookup = "lfreader_lookup.app:main"

